# otus.lesson.10

./: .travis.yml  CMakeLists.txt  application.cpp  application.h  commandblock.cpp  commandblock.h  interpreter.cpp  interpreter.h  main.cpp  metrics.h  observer.cpp  observer.h  threadsafe_queue.h
clone/otus.lesson.7-build/: CMakeCache.txt  Makefile  bulk  cmake_install.cmake  compile_commands.json
